--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
 <script src="script/bus_stop.js"></script>
 <script type="text/javascript" src="script/busroutestopdata.js"></script>
 
-<script src="script/map.js"></script>
+<!--<script src="script/map.js"></script>-->
 <script src="script/domSearch.js"></script>
 <script src="script/styler.js"></script>
 <script src="script/editJs.js"></script>
+<script type="text/javascript" src="script/mybus.js"></script>
 <!---------------------------->
 </body>
 
