new api integration in map.js

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
         
-
+<div id="result"></div>
 <div id="infoBoxModal"></div> 
 <div id="map"></div>
         
@@ -95,12 +95,11 @@
 <!-- MAIN MAP JAVASCRIPT -->
 <script src="script/bus_stop.js"></script>
 <script type="text/javascript" src="script/busroutestopdata.js"></script>
-
-<!--<script src="script/map.js"></script>-->
+<script type="text/javascript" src="script/mybus.js"></script>
+<script src="script/map.js"></script>
 <script src="script/domSearch.js"></script>
 <script src="script/styler.js"></script>
 <script src="script/editJs.js"></script>
-<script type="text/javascript" src="script/mybus.js"></script>
 <!---------------------------->
 </body>
 
